[a11y] Add accessible name to color chooser hex input field.

Bug: 882340
Change-Id: I0897afd6e048816630c22a3e714829f3c685a0e4
Reviewed-on: https://chromium-review.googlesource.com/1215460
Commit-Queue: Darren Shen <shend@chromium.org>
Reviewed-by: Alice Boxhall <aboxhall@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591201}